src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <formula>FLOOR((TODAY()-Birthdate)/365.2425)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Effective_Time__c</fullName>
        <label>Effective Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <label>Patient</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Site</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Surgeon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncologist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radiology Coordinator</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pg_staff_id__c</fullName>
        <label>pg_staff_id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>staff_id__c</fullName>
        <label>staff_id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>Migrated</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>Site__c</columns>
        <columns>Type__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>pg_staff_id__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>pg_staff_id__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Migrated</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <namedFilters>
        <fullName>nf_01IE0000000R0OmMAK_00NE0000001EjCjMAK</fullName>
        <active>true</active>
        <field>Registration__c.Oncologist__c</field>
        <filterItems>
            <field>Contact.Type__c</field>
            <operation>equals</operation>
            <value>Doctor, Oncologist</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Registration_Oncologist</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IE0000000R0OmMAK_00NE0000001EjD3MAK</fullName>
        <active>true</active>
        <field>Registration__c.Surgeon__c</field>
        <filterItems>
            <field>Contact.Type__c</field>
            <operation>equals</operation>
            <value>Doctor, Surgeon</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Registration_Surgeon</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IE0000000R0OmMAK_00NE0000001EjDSMA0</fullName>
        <active>true</active>
        <field>Registration__c.Clinical_Coordinator__c</field>
        <filterItems>
            <field>Contact.Type__c</field>
            <operation>equals</operation>
            <value>Doctor, Clinical Coordinator</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Registration_Clinical Coordinator</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IE0000000R0OmMAK_00NE0000001EjDcMAK</fullName>
        <active>true</active>
        <field>Registration__c.Radiology_Coordinator__c</field>
        <filterItems>
            <field>Contact.Type__c</field>
            <operation>equals</operation>
            <value>Doctor, Radiology Coordinator</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Registration_Radiology Coordinator</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IE0000000RFRCMA4_00NE00000028FLJMA2</fullName>
        <active>false</active>
        <field>Patient_Custom__c.Primary_MD__c</field>
        <filterItems>
            <field>Contact.Type__c</field>
            <operation>equals</operation>
            <value>Doctor, MD</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Patient_Primary MD</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IE0000000RFRCMA4_00NE00000028FLPMA2</fullName>
        <active>false</active>
        <field>Patient_Custom__c.Surgeon__c</field>
        <filterItems>
            <field>Contact.Type__c</field>
            <operation>equals</operation>
            <value>Surgeon</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Patient_Surgeon</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Ic00000000EuoEAE_00Nc0000000GwtHEAS</fullName>
        <active>true</active>
        <field>Post_Surgaory_Summary__c.Surgeon__c</field>
        <filterItems>
            <field>Contact.Type__c</field>
            <operation>equals</operation>
            <value>Doctor, Surgeon</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Post Surgery Summary_Surgeon</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Ic00000000G5JEAU_00Nc0000000HAnNEAW</fullName>
        <active>true</active>
        <field>Staging_Detail__c.Adjudicated_By__c</field>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Doctor</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Staging Detail_Contact</name>
    </namedFilters>
    <recordTypes>
        <fullName>Doctor</fullName>
        <active>true</active>
        <label>Doctor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Site_User</fullName>
        <active>true</active>
        <label>Site User</label>
    </recordTypes>
</CustomObject>